gap fix

--- a/src/components/talent-calculator/changed-select/changed-select.module.css
+++ b/src/components/talent-calculator/changed-select/changed-select.module.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 1rem;
   margin: 0 2rem 1rem;
 }
 
 .changedSelectSingle {
   flex: 1;
+  margin: 0;
   position: relative;
   text-align: center;
   min-width: 112px;
